<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/commons"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cuisine_fusion" />

        <ImageView
            android:id="@+id/commons_view"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/commons_image"
            app:srcCompat="@drawable/commons" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="9dp"
            android:text="@string/address"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="9dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/address_image"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/address_icon"
                app:srcCompat="@drawable/location" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-4dp"
                android:text="@string/the_address"
                android:textColor="@color/red" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/opening_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="9dp"
            android:text="@string/opening_hours"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="9dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/opening_hours_image"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/clock_icon"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/opening_hours_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-3dp"
                android:text="@string/monday_sunday_10_00_am_11_00_pm"
                android:textColor="@color/red" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginVertical="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:text="@string/reviews"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/food_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginHorizontal="12dp"
                    android:contentDescription="@string/food_icon"
                    app:srcCompat="@drawable/food_icon" />

                <TextView
                    android:id="@+id/food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/drinks_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginHorizontal="12dp"
                    android:contentDescription="@string/drinks_icon"
                    app:srcCompat="@drawable/drinks_icon" />

                <TextView
                    android:id="@+id/drinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drinks"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/food_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/three_love_icon"
                    android:paddingStart="0dp"
                    android:paddingEnd="43dp"
                    app:srcCompat="@drawable/love3_icon" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/drinks_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/four_love_icon"
                    app:srcCompat="@drawable/love4_icon" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/service_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginHorizontal="12dp"
                    android:contentDescription="@string/service_icon"
                    app:srcCompat="@drawable/service_icon" />

                <TextView
                    android:id="@+id/service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/service"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ambience_view"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginHorizontal="12dp"
                    android:contentDescription="@string/ambiance_icon"
                    app:srcCompat="@drawable/ambience_icon" />

                <TextView
                    android:id="@+id/ambiance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ambiance"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/service_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/five_love_icon"
                    app:srcCompat="@drawable/love5_icon" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ImageView
                    android:id="@+id/ambiance_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/four_love_icon"
                    app:srcCompat="@drawable/love4_icon" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</LinearLayout>